--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -182,6 +182,7 @@
       // order: 1;
     }    
     .article-list-content{
+      overflow: hidden;
       // display: none;
       // order: 3;
     }
